--- a/my_list.html
+++ b/my_list.html
@@ -1,5 +1,5 @@
-"Gwen Stefani"
-"Shakira"
-"Beyonce"
-"Jennifer Lopez"
-"Madonna"
+<li>"Gwen Stefani"</li>
+<li>"Shakira"</li>
+<li>"Beyonce"</li>
+<li>"Jennifer Lopez"</li>
+<li>"Madonna"</li>
